- Added support for Fulfillment.update_tracking ([#432](https://github.com/Shopify/shopify_python_api/pull/432))
- Add FulfillmentEvent resource ([#454](https://github.com/Shopify/shopify_python_api/pull/454))

== Version 8.2.0
- [Feature] Add support for Dynamic API Versioning. When the library is initialized, it will now make a request to 
Shopify to fetch a list of the available API versions. ([#441](https://github.com/Shopify/shopify_python_api/pull/441))

== Version 8.1.0
- [Feature] Add support for Shopify Payments resources (#428)

== Version 8.0.4
- Release API version 2020-10
- Deprecate API version 2019-10

== Version 8.0.3
- Patch for replacing call to _build_list() with _build_collection() in gift_card.py

== Version 8.0.2
- Patch for product updating with variants

== Version 8.0.1
- release api version 2020-07
- deprecate api version 2019-07
- Add support for FulfillmentOrder resource (#390)

== Version 8.0.0
- release api version 2020-04
- deprecate api version 2019-04

== Version 7.0.3
- bug fix for temporary sessions
- deprecation fix for regexs

== Version 7.0.2
- bug fix for variant updates after the 2019-10 api version

== Version 7.0.1
- bug fix for string interpolation

== Version 7.0.0
* Made no_iter_next default to True on collection so that by default it only
fetches a single page
* Passes kwargs to paginated collections so that attributes can be set with
find()
* Allow case insensitive check for the link header for cursor pagination.

== Version 6.0.1
* Made the collection access more consistent so that there is no confusion
between a collection and a paginated collection

== Version 6.0.0
* Add Cursor pagination support

== Version 5.1.2
* Add version 2020-01 to known ApiVersions. This version will not be usable until October 2019.

== Version 5.1.1
* Fix initializing API with basic auth URL.

== Version 5.1.0
* Added support for GraphQL queries with a GraphQL resource

== Version 5.0.1