@@ -52,8 +52,9 @@ class TasksMeta(type):
         # Allow unambigious abbreviations of tasks
         if task not in cls._tasks:
             matches = filter(lambda item: item.startswith(task), cls._tasks)
-            if len(matches) == 1:
-                task = matches[0]
+            list_of_matches = list(matches)
+            if len(list_of_matches) == 1:
+                task = list_of_matches[0]
             else:
                 sys.stderr.write('Could not find task "%s".\n' % (task))
 
