@@ -1,0 +1,4 @@
+from ..base import ShopifyResource
+
+class ApplicationCredit(ShopifyResource):
+    pass
