@@ -1,0 +1,8 @@
+{
+  "application_credit": {
+    "id": 445365009,
+    "amount": "5.00",
+    "description": "credit for application refund",
+    "test": null
+  }
+}
