@@ -1,0 +1,10 @@
+{
+  "application_credits": [
+    {
+      "id": 445365009,
+      "amount": "5.00",
+      "description": "credit for application refund",
+      "test": null
+    }
+  ]
+}
