@@ -1,5 +1,5 @@
 [tox]
-envlist = py27, py34, py35, py36, py38, py39
+envlist = py27, py34, py35, py36
 skip_missing_interpreters = true
 
 [testenv]
